<resources>
    <string name="app_name">Smart shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">2699764026779212</string>
    <string name="fb_login_protocol_scheme">fb2699764026779212</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="publicacoes">publicações</string>
    <string name="titulo_do_anucio">Titulo do anúncio</string>
    <string name="preco">preco</string>
    <string name="cor">Cor</string>
    <string name="contacto">Contacto</string>
    <string name="marca">Marca</string>
    <string name="bairro">Bairro</string>
    <string name="text_big">Na tela da figura anterior, basta clicarmos no botão “Install” para instalarmos o Android Studio em nosso computador. Vejamos o resultado na figura seguinte</string>
    <string name="donativo">Donativo</string>
    <string name="ajuda_nos">Ajuda nos</string>
    <string name="sobre">Sobre</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="termos_e_condicoes_de_uso">Termos e condições de uso</string>
    <string name="ajuda_nos_a_melhorar_o_aplicativo">Ajuda nos a melhorar o aplicativo</string>
    <string name="a">as</string>
    <string name="mais_produtos">Mais Produtos</string>
    <string name="ver_mais_detalhes">ver mais detalhes</string>
    <string name="ligar">Ligar</string>
    <string name="enviar_mensagem">Enviar Mensagem</string>
    <string name="descricao_do_anucio">Descricao do anúncio</string>
    <string name="localizacao">localização</string>
    <string name="selecione_a_sua_localizacao">Selecione a sua localização </string>
    <string name="selecionar_preco">Selecionar preco</string>
    <string-array name="provincias">
        <item>Maputo</item>
        <item>Gaza</item>
        <item>Inhambane</item>
        <item>Sofala</item>
        <item>Manica</item>
        <item>Tete</item>
        <item>Zambezia</item>
        <item>Nampula</item>
        <item>Niassa</item>
        <item>Cabo Delgado</item>

    </string-array>
    <string-array name="distrito_maputo">
        <item>Boane </item>
        <item>Magude</item>
        <item>Manhiça</item>
        <item>Marracuene</item>
        <item>Matola</item>
        <item>Matutuíne</item>
        <item>Moamba</item>
        <item>Namaacha</item>
    </string-array>
    <string-array name="distrito_gaza">
        <item>Bilene </item>
        <item>Chibuto</item>
        <item>Chicualacuala</item>
        <item>Chigubo </item>
        <item>Chókwè</item>
        <item>Chonguene</item>
        <item>Guijá</item>
        <item>Limpopo</item>
        <item>Mabalane</item>
        <item>Manjacaze</item>
        <item>Mapai</item>
        <item>Massangena </item>
        <item>Massingir</item>
        <item>Xai-Xai</item>
    </string-array>
    <string-array name="distrito_inhambane">
        <item>Funahlouro</item>
        <item>Govuro</item>
        <item>Homoíne</item>
        <item>Inhassoro</item>
        <item>Jangamo</item>
        <item>Mabote</item>
        <item>Massinga</item>
        <item>Maxixe</item>
        <item>Morrumbene</item>
        <item>Panda</item>
        <item>Vilanculos</item>
        <item>Zavala</item>
    </string-array>
    <string-array name="distrito_manica">
        <item>Bárue</item>
        <item>Gondola </item>
        <item>Guro</item>
        <item>Macate</item>
        <item>Machaze</item>
        <item>Macossa</item>
        <item>Manica</item>
        <item>Mossurize</item>
        <item>Sussundenga</item>
        <item>Tambara</item>
        <item>Vanduzi</item>

    </string-array>
    <string-array name="distrito_tete">
        <item>Angónia</item>
        <item>Cahora-Bassa</item>
        <item>Changara</item>
        <item>Chifunde</item>
        <item>Chiuta</item>
        <item>Dôa</item>
        <item>Macanga</item>
        <item>Magoé</item>
        <item>Marara</item>
        <item>Marávia</item>
        <item>Moatize</item>
        <item>Mutarara</item>
        <item>Tete</item>
        <item>Tsangano</item>
        <item>Zumbo</item>
    </string-array>
    <string-array name="distrito_sofala">
        <item>Beira</item>
        <item>Búzi</item>
        <item>Caia</item>
        <item>Chemba</item>
        <item>Cheringoma</item>
        <item>Chibabava</item>
        <item>Dondo</item>
        <item>Machanga</item>
        <item>Maringué</item>
        <item>Marromeu</item>
        <item>Muanza</item>
        <item>Nhamatanda</item>
    </string-array>
    <string-array name="distrito_zambezia">
        <item>Alto Molócue</item>
        <item>Chinde</item>
        <item>Derre</item>
        <item>Gilé</item>
        <item>Gurué</item>
        <item>Ile</item>
        <item>Inhassunge</item>
        <item>Luabo</item>
        <item>Lugela</item>
        <item>Maganja da Costa</item>
        <item>Milange</item>
        <item>Mocuba</item>
        <item>Mocubela</item>
        <item>Molumbo</item>
        <item>Mopeia</item>
        <item>Morrumbala</item>
        <item>Mulevala</item>
        <item>Namarroi</item>
        <item>Nicoadala</item>
        <item>Namacurra</item>
        <item>Pebane</item>
        <item>Quelimane</item>
    </string-array>
    <string-array name="distrito_nampula">
        <item>Angoche</item>
        <item>Eráti</item>
        <item>Ilha de Moçambique</item>
        <item>Lalaua</item>
        <item>Larde</item>
        <item>Liúpo</item>
        <item>Malema</item>
        <item>Meconta</item>
        <item>Mecubúri</item>
        <item>Memba</item>
        <item>Mogincual</item>
        <item>Mogovolas</item>
        <item>Moma</item>
        <item>Monapo</item>
        <item>Mossuril</item>
        <item>Muecate</item>
        <item>Murrupula</item>
        <item>Nacala-a-Velha</item>
        <item>Nacarôa</item>
        <item>Nampula</item>
        <item>Rapale</item>
        <item>Ribaué</item>
    </string-array>
    <string-array name="distrito_niassa">
        <item>Chimbonila</item>
        <item>Cuamba</item>
        <item>Lago</item>
        <item>Lichinga</item>
        <item>Majune</item>
        <item>Matutuíne</item>
        <item>Mandimba</item>
        <item>Marrupa</item>
        <item>Maúa</item>
        <item>Mavago</item>
        <item>Marrupa</item>
        <item>Mecula</item>
        <item>Metarica</item>
        <item>Muembe</item>
        <item>Ngauma</item>
        <item>Nipepe</item>
        <item>Sanga</item>
    </string-array>
    <string-array name="distrito_cabo_delgado">
        <item>Ancuabe</item>
        <item>Balama</item>
        <item>Chiúre</item>
        <item>Ibo</item>
        <item>Mecufi</item>
        <item>Meluco</item>
        <item>Metuge</item>
        <item>Mocímboa da Praia</item>
        <item>Montepuez</item>
        <item>Mueda </item>
        <item>Muidumbe</item>
        <item>Namuno</item>
        <item>Nangade</item>
        <item>Palma</item>
        <item>Quissanga</item>
    </string-array>
    <string-array name="categorias_de_produtos">
        <item>Acessórios para veículos</item>
        <item>Agro , Indústria e Comércio</item>
        <item>Alimentos e Bebida</item>
        <item>Animais</item>
        <item>Antiguidade e Colecções</item>
        <item>Arte , Papelaria e Armarinho</item>
        <item>Bebés</item>
        <item>Beleza e cuidado pessoal</item>
        <item>Brinquedos e Hobbies</item>
        <item>Calçados ,Roupa e Bolsas</item>
        <item>Casa , Moveis e Decoração</item>
        <item>Carros, Motos e Outros</item>
        <item>Telfones e Tablets</item>
        <item>Câmaras e Acessórios</item>
        <item>Electrodomésticos</item>
        <item>Electrónicos , Áudio e Vídeos</item>
        <item>Esporte e Fitness</item>
        <item>Ferramentas e Construção</item>
        <item>Festas</item>
        <item>Games</item>
        <item>Imóveis</item>
        <item>Informática</item>
        <item>Ingressos</item>
        <item>Instrumentos Musicais</item>
        <item>Jóias e Relógios</item>
        <item>Livros, Revistas e Comics</item>
        <item>Música ,Filmes e Seriados</item>
        <item>Animais</item>
        <item>Saúde</item>
        <item>Serviços</item>

    </string-array>
    <string-array name="sub_categoria_acessorios_para_veiculos">
        <item>Aces de Carros e Caminhonetes</item>
        <item>Aces de Motos e Quadriciclos</item>
        <item>Aces e Peças para Camiões</item>
        <item>Acessórios e Peças Náuticos</item>
        <item>Ferramentas</item>
        <item>GNV</item>
        <item>Limpeza Automotivo</item>
        <item>Navegadores GPS</item>
        <item>Peças de Carros e Caminhonetes</item>
        <item>Peças de Maquinaria Pesada</item>
        <item>Peças de Motos e Quadriciclos</item>
        <item>Perfomance</item>
        <item>Pneus</item>
        <item>Rodas</item>
        <item>Segurança Veicular</item>
        <item>Serviços Programados</item>
        <item>Som Automotivo</item>
        <item>Tuning</item>
        <item>Outros</item>
    </string-array>
    <string-array name="sub_categoria_angro_industria">
        <item>Arquitectura e Desenho</item>
        <item>Embalagem</item>
        <item>Equipamento Comercial</item>
        <item>Equipamento de Segurança</item>
        <item>Equipamento para escritórios</item>
        <item>Equipamento para Indústrias</item>
        <item>Indústria Agropecuaria</item>
        <item>Indústria Gráfica e Impressão</item>
        <item>Indústria Têxtil</item>
        <item>Material de Promoção</item>
        <item>Uniformes</item>
        <item>Outros</item>
    </string-array>
    <string-array name="sub_categoria_alimentos_bebidas">
        <item>Bebidas</item>
        <item>Comestíveis</item>
        <item>Comida Preparada e Catering</item>
        <item>Frescos</item>
        <item>Outros</item>
    </string-array>
    <string-array name="sub_categoria_animais">
        <item>Anifibios e Répteis</item>
        <item>Aveiro  e Acessórios</item>
        <item>Cachorros</item>
        <item>Cavalos</item>
        <item>Coelhos</item>
        <item>Gatos</item>
        <item>Insectos</item>
        <item>Peixes</item>
        <item>Roedores</item>
        <item>Outros</item>
    </string-array>
    <string-array name="sub_categoria_antiguidades">
        <item>Antiguidades</item>
        <item>Cédulas e Moedas</item>
        <item>Colecionaveis e Esportes</item>
        <item>Esculturas</item>
        <item>Filatelia</item>
        <item>Milateria e Afins</item>
        <item>Posteres</item>
        <item>Outras Antiguidades</item>
    </string-array>
    <string-array name="sub_categorias_artes_papelaria">
        <item>Arte</item>
        <item>Artigos de Armarinho</item>
        <item>Espelhos de Mosaico</item>
        <item>Formas para sabonetes</item>
        <item>Insumos para Fazer velas</item>
        <item>Materiais Escolares</item>
        <item>Peças para Chaveiros</item>
        <item>Outros</item>
    </string-array>
    <string name="categorias">Categorias</string>
    <string name="notificacoes">Notificacoes</string>
</resources>