<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_add_to_photos_black_24dp"
            android:id="@+id/nav_home"
            android:title="Publicar anúncio" />

        <item
            android:icon="@drawable/ic_business_center"
            android:id="@+id/lojas_oficias"
            android:title="Lojas Oficias" />

        <item
            android:icon="@drawable/ic_filter_list"
            android:id="@+id/categoria"
            android:title="@string/categorias" />

        <item
            android:icon="@drawable/ic_credit_card_black"
            android:id="@+id/smart_wallet"
            android:title="Smart Wallet" />

        <item
            android:icon="@drawable/ic_share_black_24dp"
            android:id="@+id/compartilhar"
            android:title="@string/compartilhar" />

    </group>

    <item android:title="Mais">
        <menu>
            <item
                android:icon="@drawable/ic_notifications"
                android:id="@+id/doar"
                android:title="@string/notificacoes" />
            <item
                android:icon="@drawable/ic_contact_mail_black_24dp"
                android:id="@+id/contacto"
                android:title="@string/contacto" />
        </menu>
    </item>

</menu>
