<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".publicar.InformacoesPublicar">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="55dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:textColor="@android:color/white"
            android:text="@string/descricao_do_anucio"/>
    </LinearLayout>



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_titulo"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="80"
                    android:hint="@string/titulo_do_anucio">
                </com.google.android.material.textfield.TextInputEditText>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_preco"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="20"
                    android:hint="@string/preco">
                </com.google.android.material.textfield.TextInputEditText>

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_contacto"
                    android:maxLength="20"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/contacto">
                </com.google.android.material.textfield.TextInputEditText>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_bairo"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bairro">
                </com.google.android.material.textfield.TextInputEditText>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/sp_provincias"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Spinner>

                <Spinner
                    android:id="@+id/sp_distritos"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/sp_categoria"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Spinner>

                <Spinner
                    android:id="@+id/sp_sub_categoria"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/cb_negociavel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="Negociavel"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_destalhes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_descricao"
                    android:hint="Descricao"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_def"
                    />
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_publicar"
                    android:layout_width="match_parent"
                    android:background="@drawable/btn_bg"
                    android:layout_alignParentBottom="true"
                    android:textColor="@android:color/white"
                    android:text="Publicar"
                    android:layout_margin="5dp"
                    android:layout_height="50dp" />



            </RelativeLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>






</LinearLayout>
</RelativeLayout>