<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".publicar.Editar">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="55dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/white"
            android:text="Edtidar "/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_titulo"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="80"
                    android:hint="@string/titulo_do_anucio">
                </com.google.android.material.textfield.TextInputEditText>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_preco"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="20"
                    android:hint="@string/preco">
                </com.google.android.material.textfield.TextInputEditText>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_color"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="20"
                    android:hint="@string/cor">
                </com.google.android.material.textfield.TextInputEditText>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_estado"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Estado">
                </com.google.android.material.textfield.TextInputEditText>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_marca"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Marca/Tipo">
                </com.google.android.material.textfield.TextInputEditText>

            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_contacto"
                    android:maxLength="20"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/contacto">
                </com.google.android.material.textfield.TextInputEditText>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_bairo"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bairro">
                </com.google.android.material.textfield.TextInputEditText>


            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/sp_provincias"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Spinner>

                <Spinner
                    android:id="@+id/sp_distritos"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/sp_categoria"
                    android:layout_weight="1"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Spinner>

                <Spinner
                    android:id="@+id/sp_sub_categoria"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/cb_negociavel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Negocialvel"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_descricao"
                    android:hint="Descricao"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_def"
                    />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btn_publicar"
                    android:layout_width="match_parent"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/btn_bg"
                    android:textColor="@android:color/white"
                    android:text="Publicar"
                    android:layout_margin="20dp"
                    android:layout_height="50dp" />

            </RelativeLayout>



        </LinearLayout>

    </ScrollView>




</LinearLayout>